# evergreen-mcp-server

./: .dockerignore  .drone.yml  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  INTELLIGENT_PROJECT_DETECTION.md  LICENSE.md  README.md  SECURITY.md  merged-schema.graphql  openapi-generator-config.yaml  pyproject.toml  run_mcp_server.py  run_server.py  script.md  setup.cfg  test_mcp_client.py  test_mcp_manual.py
.github/: CODEOWNERS
.github/workflows/: docker-build.yml  lint.yml  test.yml
environments/: common.yml  production.yml  staging.yml
scripts/: clean  fetch_graphql_schema.sh  generate_evergreen_client  kanopy-token-refresh.py  kanopy-token.sh  pre-commit-validate-queries.sh  validate_queries.py
src/: evergreen_graphql_client.py  failed_jobs_tools.py  mcp_tools.py  run_mcp_server.py  server.py
src/evergreen_fast_mcp/: __init__.py  server.py  tools.py
src/evergreen_mcp/: __init__.py  __main__.py  artifact_download_tools.py  auto_triage_client.py  evergreen_graphql_client.py  evergreen_queries.py  evergreen_rest_client.py  failed_jobs_tools.py  mcp_tools.py  models.py  oauth_token.py  oidc_auth.py  reconnect.py  restart_tools.py  schedule_tools.py  schema_validator.py  server.py  tools.py  utils.py  waterfall_tools.py
src/evergreen_mcp/schemas/: __init__.py  types.py
src/evergreen_mcp/skills/debugging-workflow/: SKILL.md
src/evergreen_mcp/skills/evergreen-auth/: SKILL.md
src/evergreen_mcp/skills/evergreen-concepts/: SKILL.md
src/evergreen_mcp/skills/tool-guide/: SKILL.md
tests/: test_artifact_download_tools.py  test_basic.py  test_cli.py  test_client_validation.py  test_configurable_urls.py  test_evergreen_rest_client.py  test_failed_jobs.py  test_failed_jobs_tools.py  test_graphql_client.py  test_graphql_reconnect.py  test_mcp_client.py  test_oauth_token.py  test_oidc_auth.py  test_oidc_concurrency.py  test_per_request_credentials.py  test_project_inference.py  test_reconnect.py  test_restart_tools.py  test_schedule_tools.py  test_schema_validation.py  test_waterfall_tools.py
