[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["evergreen_mcp*"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["evergreen_mcp"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[project]
name = "evergreen-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides access to the Evergreen CI/CD platform API"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Geoff Mishkin", email = "geoff.mishkin@mongodb.com" }
]
keywords = ["mcp", "evergreen", "ci", "cd", "model-context-protocol", "mongodb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "urllib3",
    "python-dateutil",
    "aiohttp",
    "aiohttp-retry",
    "pydantic",
    "typing-extensions",
    "pyyaml",
    "mcp",
    "gql[aiohttp]"
]

[project.urls]
"Homepage" = "https://github.com/evergreen-ci/evergreen-mcp-server"
"Repository" = "https://github.com/evergreen-ci/evergreen-mcp-server"
"Bug Tracker" = "https://github.com/evergreen-ci/evergreen-mcp-server/issues"
"Documentation" = "https://github.com/evergreen-ci/evergreen-mcp-server#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[project.scripts]
evergreen-mcp = "evergreen_mcp.server:main"
