[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["evergreen_mcp*", "evergreen_fast_mcp*"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["evergreen_mcp", "evergreen_fast_mcp"]

[project]
name = "evergreen-mcp-server"
version = "0.4.0"
description = "A server for interacting with the Evergreen API."
authors = [
    { name = "Geoff Mishkin", email = "geoff.mishkin@mongodb.com" }
]
dependencies = [
    "urllib3",
    "python-dateutil",
    "aiohttp",
    "aiohttp-retry",
    "pydantic",
    "typing-extensions",
    "pyyaml",
    "mcp",
    "fastmcp>=2.0.0",
    "gql[aiohttp]"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[project.scripts]
# Legacy server (deprecated)
evergreen-mcp-server = "evergreen_mcp.server:main"
# New FastMCP-based server (recommended)
evergreen-fastmcp-server = "evergreen_fast_mcp.server:main"
